Bug 136336 - LO Writer does not display footnote text on mouse hover for GTK 3
Summary: LO Writer does not display footnote text on mouse hover for GTK 3
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.6.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.4
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-31 16:51 UTC by Tom Sullivan
Modified: 2020-11-16 08:47 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample footnote (8.29 KB, application/vnd.oasis.opendocument.text)
2020-11-13 15:51 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Sullivan 2020-08-31 16:51:09 UTC
Description:
Upgraded to 6.4.6.2. When I hover the mouse over a footnote number in the main text, there is no popup showing me the text of the footnote. This used to work. I do have tools/options/LibreOffice/General/Extended Tooltips checked. Running Debian buster, XFCE 4.12
 tested it on a different computer also running Debian Buster. The problem appears on both XFCE and LXDE. The other computer uses Debian's video drivers, the first, Nvidia.
Thanks to forum user Opaque for this finding: From my tests: it is a problem when using the gtk3 VCL (See in Help -> About LibreOffice) The problem happens on all combinations of LibreOffice versions and desktop managers (Tested: MATE, LXDE, LXQt, Plasma and Xfce). Even "Plasma"-desktop doesn't select VCL:kde5 but a mixed VCL:gtk3_kde5 which also does show the problem. I did not succeed running LibreOffice in VCL:kde5 mode, which normally could be forced using SAL_USE_VCLPLUGIN=kde5 libreoffice (forcing GTK3 on my other system also shows the problem) - Hence my conclusion is: This is a general problem of the GTK3 support of LibreOffice (if not of the GTK toolkit issue at all).

Steps to Reproduce:
1. Type some text and include a footnote in it.
2. Put some text in the footnote.
3. Hover your mousepointer over the footnote marker in the main text.

Actual Results:
Nothing happens.

Expected Results:
You should see the text of the footnote pop up a little after you stop moving the mouse.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Problem appears on multiple machines by different users, so resetting user profile not applicable.
Comment 1 Miklos Vajna 2020-11-13 15:51:02 UTC
Confirmed, it works with gen, but not with gtk3.
Comment 2 Miklos Vajna 2020-11-13 15:51:41 UTC
Created attachment 167279 [details]
Sample footnote

Sample document with a footnote, for easier reproducing.
Comment 3 Caolán McNamara 2020-11-13 16:03:50 UTC
this typically happens when the tooltip area is set to a point instead of a rectangle
Comment 4 Commit Notification 2020-11-14 09:51:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/05b279e7e0773d3c3da2688a2b95edfb8c88308c

tdf#136336 ensure tooltip area surrounds the current mouse position

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2020-11-14 09:54:30 UTC
fixed in master, backport to 7-0 in gerrit
Comment 6 Commit Notification 2020-11-14 20:01:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/8d317a4f8159117c27721192cc8f8ac6c694fdc0

tdf#136336 ensure tooltip area surrounds the current mouse position

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Miklos Vajna 2020-11-16 08:47:29 UTC
Thanks!