tdf#136336 ensure tooltip area surrounds the current mouse position

with at least a pixel margin

Change-Id: I74935f0275863cfd5a799927034d0a31dae073cf